# minilang

./: .gitignore  DragonName.txt  Main.hs  README  README.md  build.sh  clean.sh  comp-hw.cabal  minilang.cabal  minilang.hs  minilang.x  run.sh  test.sh
app/: Main.hs
programs/invalid/: comment.min  float.min  if.min  ifelse.min  string.min  while.min
programs/invalid_semantically/: assign1.min  assign2.min  assign3.min  assign4.min  assign5.min  dclr1.min  dclr2.min  dclr3.min  div1.min  div2.min  div3.min  div4.min  div5.min  if1.min  if2.min  minus1.min  minus2.min  minus3.min  minus4.min  minus5.min  plus1.min  plus2.min  plus3.min  plus4.min  times1.min  times2.min  times3.min  unary1.min  while1.min  while2.min
programs/valid/: dclrs.min  exp.min  factorial.min  floats.min  ifwhile2.min  ints.min  nested.min  prog1.min  sqrt.min  stmts.min  stringconcat.min  stringrepeat.min  strings.min  unary.min  valid1.min
src/: Compiler.hs  Language.hs  Lexer.x  Main.hs  Parser.y
src/Compiler/: Generator.hs  Language.hs  Lexer.x  Parser.y  SymbolTable.hs  TypeChecker.hs
test/: Spec.hs
