name:                comp-hw
version:             0.1.0.0
-- synopsis:
-- description:
author:              Charlie Bloomfield <charlielbloomfield@gmail.com>
maintainer:          (none)
-- copyright:
-- category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.8

executable parser
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Compiler
                     , Compiler.Parser
                     , Compiler.Lexer
                     , Compiler.Language
                     , Compiler.SymbolTable
                     , Compiler.TypeChecker
  build-depends:       base >= 3 && < 5
                     , array
                     , containers
  build-tools:         happy
                     , alex
  ghc-options: -Wall
